# uberdisplay

./: .gitignore  agents.md  readme.md  spec.md  todo.md
.github/workflows/: android-ci.yml
android/: .gitignore  build.gradle  gradlew  gradlew.bat  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/layout/: activity_action_menu.xml  activity_action_menu_edit.xml  activity_main.xml  activity_mirror.xml  (+2 more)
libs/sonarpen-sdk/Samples/: SonarPenDemo.apk  SonarPenDemo2.apk
libs/sonarpen-sdk/Samples/SonarPenDemo/: local.properties
libs/sonarpen-sdk/Samples/SonarPenDemo/app/: build.gradle
libs/sonarpen-sdk/Samples/SonarPenDemo2/: gradle.properties
libs/sonarpen-sdk/Samples/SonarPenDemo2/app/: build.gradle
libs/sonarpen-sdk/libs/: sonarpen.aar
libs/sonarpen-sdk/libs/Documents/: README_FIRST.txt  SonarPenActivity.txt  SonicPenCallBack.txt  SonicPenUtilities.txt
magisk/uberdisplay-root/: IPC.md  README.md  customize.sh  module.prop  service.sh  zip-module.ps1
magisk/uberdisplay-root/common/: README.txt
pc/: .gitignore  package-lock.json  package.json
pc/app/: globals.css  layout.tsx  package-lock.json  package.json  page.tsx
pc/app/app/: globals.css  page.tsx
pc/app/components/: Toast.tsx
pc/app/diagnostics/: page.tsx
pc/app/preferences/: page.tsx
pc/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.manifest
pc/src-tauri/src/: app_state.rs  capture.rs  codec.rs  device_registry.rs  diagnostics_report.rs  display_probe.rs  driver_ipc.rs  driver_manager.rs  driver_probe.rs  encoder.rs  host_log.rs  host_transport.rs  lib.rs  linux_vdd.rs  main.rs  mf_encoder.rs  service_manager.rs  session.rs  session_state.rs  settings_registry.rs  stream_loop.rs  transport_probe.rs  vdd_ops.rs  vdd_protocol.rs
pc/src-tauri/src/protocol/: framing.rs  handshake.rs  mod.rs  packets.rs
scripts/: android-build-no-root.ps1  android-build-root.ps1  magisk-build.ps1  pc-build.ps1  pc-dev.ps1
(+91 files in other folders)
