[package]
name = "uberdisplay_pc"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
serde_json = "1.0"
windows = { version = "0.54.0", features = ["Win32_Devices_DeviceAndDriverInstallation", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock"] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
